# a2ui-agent

./: .env  .gitignore  README.md  a2ui_utils.py  agent.py  agent_executor.py  deploy.py  generate_auth.sh  main.tf  prompt_builder.py  pyproject.toml  requirements.txt  sample_samsung.json  state_manager.py  tools.py
a2a/server/request_handlers/: rest_handler.py
agent_home/samsung_agent/: __init__.py  agent.py
agent_home/samsung_agent/.adk/: session.db
examples/.adk/: session.db
examples/0.8/: product_category_list.json  product_confirm.json  product_list.json  samsung_category_list.json  samsung_confirm.json  samsung_list.json
libs/a2ui-agent-sdk/: PKG-INFO
libs/a2ui-agent-sdk/src/a2ui/a2a/: __init__.py
test/: test_agent.py
