# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "a2ui-contactcard-agentengine"
version = "0.1.0"
description = "Sample Google ADK-based Contact Lookup agent that uses a2ui extension and is hosted as an A2A agent on Agent Engine."
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [    
    "google-cloud-aiplatform[adk,agent-engines]>=1.128.0",
    
    # a2ui와 a2a가 내부적으로 사용하는 공개 패키지들 추가
    "google-adk>=1.28.1",
    "google-genai>=1.27.0",
    "jsonschema>=4.0.0",
    "a2ui-agent-sdk==0.1.2",
    "a2a-sdk==0.3.25"
]